[package]
name = "harpoon"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["network", "provider-ws"], optional = true }
async-stream = "0.3"
async-trait = "0.1"
dotenv = "0.15.0"
eyre = "0.6"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1", features = ["log"] }

[features]
default = ["evm", "telegram"]
evm = ["dep:alloy", "dep:thiserror"]
telegram = ["dep:reqwest", "dep:serde_json"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]