[package]
name = "harpoon"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
alloy = { version = "1.0.42", features = ["provider-ws"], optional = true }
async-stream = "0.3.6"
async-trait = "0.1.89"
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"], optional = true }
serde_json = { version = "1.0.145", optional = true }
thiserror = { version = "2.0.17", optional = true }
tokio = { version = "1.48.0", features = ["rt"] }
tracing = { version = "0.1.41", features = ["log"] }

[features]
default = ["evm", "telegram"]
evm = ["dep:alloy", "dep:thiserror"]
telegram = ["dep:reqwest", "dep:serde_json"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
alloy = { version = "1.0.41", features = ["full"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]